// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Renders the primary button component 1`] = `
<div>
  <button
    class="css-17yivyq-ButtonStyles-primary e10ohzgh0"
    type="button"
  />
</div>
`;

exports[`<Button /> Renders the secondary button component 1`] = `
<div>
  <button
    class="css-jm0t4f-ButtonStyles-secondary e10ohzgh0"
    type="button"
  />
</div>
`;
